--- a/index.html
+++ b/index.html
@@ -946,16 +946,16 @@
 		         </div>
 	      	</div>
 
-	      	<!-- <div id="go-top">
+	      	<div id="go-top">
 		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
-		      </div> -->
+		      </div>
 
       	</div> <!-- /row -->
-   <!-- </footer>
+   </footer>
 
    <div id="preloader">
     	<div id="loader"></div>
-   </div> -->
+   </div>
 
    <!-- Java Script
    ================================================== -->
