update job title.

--- a/index.html
+++ b/index.html
@@ -600,12 +600,12 @@
            </div>
 
            <div class="timeline-header">
-             <h3>Web Designer</h3>
+             <h3>Founder/ Developer</h3>
              <p>May 2015 - Present</p>
            </div>
 
            <div class="timeline-content">
-             <h4>NowSheCodes Web Design</h4>
+             <h4>NowSheCodes WebDesign</h4>
              <p>The work I provide is of highest quality, fully responsive, and tested in a wide range of devices. I take great care to ensure each project is well-documented and easily maintainable so you can enhance a website as your company grows.
 
   Often front-end development of a website is overlooked, but being the part of your project that combines design, back-end development and the layer that your users interact with, from my experience, it is the most important to get right.
