Add meta property in head for page thumbnail in linkedin

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>Brittany TerBush</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
+  <meta property='og:image' content='https://pixabay.com/en/matrix-communication-software-pc-2953869/'/>
 
    <!-- mobile specific metas
    ================================================== -->
