Update meta og:image tag in head

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Brittany TerBush</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
-  <meta property='og:image' content='https://cdn.pixabay.com/photo/2017/11/16/09/32/matrix-2953869_960_720.jpg'/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://cdn.pixabay.com/photo/2017/11/16/09/32/matrix-2953869_960_720.jpg" />
 
    <!-- mobile specific metas
    ================================================== -->
