--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
    				<img src="images/brittanypic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Bay Area-based developer. Lover of web design and all things UX/UI. Dedicated to clean, minimalistic and fully responsive design that is well-organised, graphically intuitive, visually glossy, and highly engaging for prospective clients.</p>
+   				<p class="lead">Las Vegas-based developer. Lover of web design and all things UX/UI. Dedicated to clean, minimalistic and fully responsive design that is well-organised, graphically intuitive, visually glossy, and highly engaging for prospective clients.</p>
    			</div>
 
    		</div>
@@ -131,17 +131,13 @@
    					<strong>Fullname:</strong>
    					<span>Brittany Elise TerBush</span>
    				</li>
-   				<li>
+   				<!-- <li>
    					<strong>Birth Date:</strong>
-   					<span>May 12th, 1986</span>
-   				</li>
+   					<span>May 12th</span>
+   				</li> -->
    				<li>
    					<strong>Job:</strong>
    					<span>Freelancer, Frontend Developer</span>
-   				</li>
-   				<li>
-   					<strong>Website:</strong>
-   					<span>www.nowshecodes.com</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -155,7 +151,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Strong background in front-end development (focus on WordPress and JavaScript) with support of a growing back-end tool kit.</p>
+   			<p>Strong background in front-end development (focus on JavaScript, JS frameworks, WordPress, and Shopify) with support of a growing back-end tool kit.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -175,8 +171,7 @@
 				   	<strong>JavaScript</strong>
 				   </li>
 				   <li>
-
-				   	<div class="progress percent75"><span>75%</span></div>
+				   	<div class="progress percent90"><span>90%</span></div>
 				   	<strong>Wordpress</strong>
 				   </li>
 
@@ -188,7 +183,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+   			<a href="mailto:brittanyterbush@gmail.com" title="Hire Me" class="button stroke">Hire Me</a>
    			<!-- <a href="#" title="Download CV" class="button button-primary">Download CV</a> -->
    		</div>
    	</div>
