--- a/index.html
+++ b/index.html
@@ -262,11 +262,9 @@
 
                <div class="service-content">
 
-                 <h3>Blog Design/ RSS Integration</h3>
+                 <h3>Blog Design</h3>
 
-                 <p class="desc">Two resources for expanding quality content throughout your website are Blogs and RSS Feeds. They’re a great source for keyword rich terms and can have a positive impact on your website’s search engine optimization or SEO. Blogs via content marketing have become an invaluable part of any digital marketing strategy.
-
-
+                 <p class="desc">One resource for expanding quality content throughout your website is blog content. They are a great source for keyword rich terms and can have a positive impact on your website’s search engine optimization or SEO. Blogs via content marketing have become an invaluable part of any digital marketing strategy.
                </p>
 
                </div>
@@ -355,7 +353,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">E-Commerce</h3>
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Front End Development
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -387,7 +385,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Portfolio Work</h3>
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Front End Development
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -464,7 +462,7 @@
 					      <h4>E-Commerce</h4>
 					      <!-- <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p> -->
 
-					      <div class="categories">Branding</div>
+					      <div class="categories">Web Development</div>
 					   </div>
 
 			         <div class="link-box">
@@ -504,7 +502,7 @@
 					      <h4>Portfolio Work</h4>
 					      <!-- <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p> -->
 
-					      <div class="categories">Branding</div>
+					      <div class="categories">Front End Development</div>
 					   </div>
 
 			         <div class="link-box">
@@ -578,7 +576,7 @@
            </div>
 
            <div class="timeline-header">
-             <h3>WordPress Developer</h3>
+             <h3>Web Developer</h3>
              <p>Jan 2016 - Present</p>
            </div>
 
