--- a/index.html
+++ b/index.html
@@ -816,8 +816,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Oakland, CA<br>
-            94601 US
+            Las Vegas, NV<br>
+            89101 US
             </p>
 
    		</div>
@@ -873,7 +873,7 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright NowSheCodes 2017.</span>
+		        	<span>© Copyright NowSheCodes 2019.</span>
 		         </div>
 	      	</div>
 
