--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
    		</div>
    	</div> <!-- /intro-content -->
 
-   	<ul class="intro-social">
-         <li><a href="https://www.facebook.com/brittany.terbush"><i class="fa fa-facebook"></i></a></li>
+   	<!-- <ul class="intro-social">
+         <li><a href="https://www.facebook.com/brittany.terbush"><i class="fa fa-facebook"></i></a></li> -->
          <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li>
          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
          <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
          <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
-      </ul> <!-- /intro-social -->
+      <!-- </ul> /intro-social --> -->
 
    </section> <!-- /intro -->
 
