update about me

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
    				<img src="images/brittanypic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Las Vegas-based developer. Lover of web design and all things UX/UI. Dedicated to clean, minimalistic and fully responsive design that is well-organised, graphically intuitive, visually glossy, and highly engaging for prospective clients.</p>
+   				<p class="lead">Seattle-based developer. Lover of web design and all things UX/UI. Dedicated to clean, minimalistic and fully responsive design that is well-organised, graphically intuitive, visually glossy, and highly engaging for prospective clients.</p>
    			</div>
 
    		</div>
@@ -154,6 +154,10 @@
 
 				<ul class="skill-bars">
 				   <li>
+					<div class="progress percent95"><span>95%</span></div>
+					<strong>React</strong>
+				   </li>
+				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
 				   	<strong>HTML5</strong>
 				   </li>
@@ -162,16 +166,8 @@
 				   	<strong>CSS3</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>JavaScript</strong>
-				   </li>
-				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<strong>Shopify/Liquid</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
@@ -566,8 +562,73 @@
              <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
            </div> -->
 
-         </div> <!-- /timeline-block -->
+		   <div class="timeline-block">
 
+			<div class="timeline-ico">
+			  <i class="fa fa-graduation-cap"></i>
+			</div>
+ 
+			<div class="timeline-header">
+			  <h3>Front End Engineer</h3>
+			  <p>August 2022 - Present</p>
+			</div>
+ 
+			<div class="timeline-content">
+			  <h4>Amazon Web Services (AWS)</h4>
+			  <p>I design, build, and operate web services and web front end at scale, interface with design and back-end teams, and deliver the plumbing in-between. Surrounded by world-class technical talent and building on a pure infrastructure translating user requirements, I help define our roadmap, design, develop, and deploy end-to-end. </p>
+			  <p>
+				I am passionate about application development for devices and web browsers. I have a strong track record of creating reliable, scalable, and high-performance apps for devices, delivering high quality technology solutions in a hyper-growth environment where priorities shift fast.
+			  </p>
+			</div>
+ 
+		  </div> <!-- /timeline-block -->
+		  <div class="timeline-block">
+
+			<div class="timeline-ico">
+			  <i class="fa fa-graduation-cap"></i>
+			</div>
+ 
+			<div class="timeline-header">
+			  <h3>Front End Engineer</h3>
+			  <p>September 2021 - June 2022</p>
+			</div>
+ 
+			<div class="timeline-content">
+			  <h4>GameStop</h4>
+			  <ul>
+				<li>Developed using Nextjs/ React/ TypeScript/ Storybook/ Jest.</li>
+				<li>Documented application changes and developing updates.</li>
+				<li>Monitored and improved front-end performance and accessibility.</li>
+			  </ul>
+			</div>
+ 
+		  </div> <!-- /timeline-block -->
+		  <div class="timeline-block">
+
+			<div class="timeline-ico">
+			  <i class="fa fa-graduation-cap"></i>
+			</div>
+ 
+			<div class="timeline-header">
+			  <h3>Front End Engineer</h3>
+			  <p>August 2019 - September 2021</p>
+			</div>
+ 
+			<div class="timeline-content">
+			  <h4>Zappos, Inc</h4>
+			  <ul>
+				  <li>
+					Built interactive and accessible UIs for Zappos.com using HTML, CSS, JS (React) and other web technologies.
+				  </li>
+				  <li>
+					Built, deployed and maintained Node applications utilizing AWS/ ElasticBeanstalk. 
+				  </li>
+				  <li>Collaborated with UX team and business users to plan, prototype, and build new features on a Shopify platform as needed.</li>
+				  <li>Worked with UI mocks and business stakeholders to bring designs to life, delivering results with minimal project management.</li>
+			  </ul>
+			</div>
+ 
+		  </div> <!-- /timeline-block -->
          <div class="timeline-block">
 
            <div class="timeline-ico">
@@ -815,8 +876,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Las Vegas, NV<br>
-            89101 US
+            Seattle, WA<br>
+            98111 US
             </p>
 
    		</div>
