--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
    				<img src="images/brittanypic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Seattle-based developer. Lover of web design and all things UX/UI. Dedicated to clean, minimalistic and fully responsive design that is well-organised, graphically intuitive, visually glossy, and highly engaging for prospective clients.</p>
+   				<p class="lead">Los Angeles based developer. Lover of web design and all things UX/UI. Dedicated to clean, minimalistic and fully responsive design that is well-organised, graphically intuitive, visually glossy, and highly engaging for prospective clients.</p>
    			</div>
 
    		</div>
@@ -128,7 +128,7 @@
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Brittany Elise TerBush</span>
+   					<span>Brittany TerBush</span>
    				</li>
    				<!-- <li>
    					<strong>Birth Date:</strong>
@@ -136,7 +136,7 @@
    				</li> -->
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
+   					<span>Experienced Front End Engineer and Project Manager</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -150,7 +150,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Strong background in front-end development (focus on JavaScript, JS frameworks, WordPress, and Shopify) with support of a growing back-end tool kit.</p>
+   			<p>Strong background in front-end development (focus on JavaScript, REACT (JS frameworks), WordPress, and Shopify) with support of a growing back-end tool kit.</p>
 
 				<ul class="skill-bars">
 				   <li>
